--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,10 @@
-/*GENERAL INFO*/
+/*
+============================================
+GENERAL INFO
+============================================*/
 
-header {
-    width: 100vw;
-    background-color: white;
-    background: url(../images/croatia.png) no-repeat;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 32em;
-}
-
-/*HEADER*/
-
-header h1 {
-    background-color: rgb(0, 214, 108);
-    color: white;
-    border-radius: 0.4em;
-    width: 7em;
-    padding: 0.8em;
-    margin: 2.4em;
+*{
+    box-sizing: border-box;
 }
 
 body {
@@ -26,10 +12,6 @@ body {
 }
 
 body > footer {
-    position: relative;
-    left: 0;
-    bottom: 0;
-    width: 100%;
     background-color: rgb(0, 214, 108);
     color: white;
     text-align: center;
@@ -38,33 +20,28 @@ body > footer {
 }
 
 @font-face {
-    font-family: "Nexa XBold";
-    src: url(../fonts/Nexa-XBold.otf);
+    font-family: "Nexa Bold", helvetica;
+    src: url(../fonts/Nexa_Bold.ttf);
 }
 
 @font-face {
-    font-family: "Nexa Regular";
-    src: url(../fonts/NexaRegular.otf);
+    font-family: "Nexa Regular", helvetica;
+    src: url(../fonts/Nexa_Regular.ttf);
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
     font-family: "Nexa XBold";
 }
 
 h1 {
-    font-size: 3.375em;
+    font-size: 2.375em;
     color: rgb(0, 214, 108);
 }
 
 h2 {
-    font-size: 3.375em;
+    font-size: 2.375em;
     color: rgb(40, 0, 160);
-    padding: 0;
+    padding-left: 0.5em;
     margin: 0;
 }
 
@@ -73,8 +50,9 @@ h3 {
 }
 
 h4 {
-    font-size: 1.5em;
+    font-size: 1.3em;
     margin: .5em 0;
+    color: #505050;
 }
 
 h5 {
@@ -87,44 +65,83 @@ h6 {
 
 p {
     font-size: 1em;
-    font-family: "Nexa Regular";
+    font-family: "Nexa Bold";
+    color: #505050;
 }
 
 
-/*NAVIGATION MENU*/
+
+
+/*
+============================================
+HEADER
+============================================*/
+
+header {
+    width: 100vw;
+    background-color: white;
+    background: url(../images/croatia.png) no-repeat;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 32em;
+}
+
+#homepage h1 {
+    background-color: rgb(0, 214, 108);
+    color: white;
+    border-radius: 0.4em;
+    max-width: 8em;
+    padding: 0.8em;
+    margin: auto;
+    position: relative;
+    top: 60%;
+    transform: translateY(-60%);
+}
+
+
+
+/*
+============================================
+NAVIGATION MENU
+============================================*/
 
 nav ul {
+    position: fixed;
     list-style-type: none;
     margin: 0;
+    width: 100%;
     padding: 0;
     overflow: hidden;
     background-color: #fff;
     display: flex;
-    align-items: center
+    align-items: center;
+    height: 5em;
+    z-index: 1;
+    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2);
 }
 
 nav li a {
-    display: block;
+    display: inline-block;
     font-family: "Nexa XBold";
     color: rgb(0, 214, 108);
-    padding: 0.7em 1em;
+    padding: 0em 1em;
     text-decoration: none;
-    font-size: 1.4em;
-
+    font-size: 1.2em;
 }
 
 nav li a:hover {
     color: rgb(40, 0, 160);
     transition: 0.25s;
-
 }
 
 nav li img {
-    width: 1.4em;
+    width: 2em;
     display: inline-block;
     padding-right: 0.5em;
-    padding-left: 1em;
     vertical-align: middle;
+    margin-left: 1.4em;
+    margin-bottom: 0.3em;
 }
 
 header h1 {
@@ -132,35 +149,39 @@ header h1 {
 }
 
 
-/*POPULAIRE VERHALEN*/
+
+/*
+============================================
+POPULAIRE VERHALEN
+============================================*/
+
 
 section:nth-of-type(1) {
     background-color: rgb(243, 229, 216);
-    padding: 5em;
+    padding: 2em;
+    padding-bottom: 3em;
 }
 
 section:nth-of-type(1) article {
     background-color: white;
-    margin: 2em 2em 5em 0em;
+    margin: 2em 2em 3em 0em;
     width: 20em;
     height: 30em;
     border-radius: .75em;
-    position: relative;
-}
-
-.container {
-    display: flex;
-    flex-direction: row;
-    justify-content: left;
-    overflow-x: scroll;
-    flex-shrink: 0;
 }
 
 section:nth-of-type(1) article h3 {
     color: rgb(0, 214, 108);
+    margin-top: 0;
+    margin-bottom: 0.5em;
 }
 
-section > footer a {
+section:nth-of-type(1) article h3:hover {
+    color: rgb(255, 50, 104);
+    transition: 0.25s;
+}
+
+section:nth-of-type(1) > footer a {
     color: white;
     background-color: rgb(255, 50, 104);
     box-shadow: 0px 4px rgb(202, 43, 85);
@@ -170,15 +191,33 @@ section > footer a {
     padding: 1em 2em;
     text-decoration: none;
     font-family: Nexa Bold;
+    -moz-transition: background-color 0.25s ease-out;
+    -o-transition: background-color 0.25s ease-out;
+    transition: background-color 0.25s ease-out;
 }
 
-footer a:hover {
+section:nth-of-type(1) > footer a:hover {
+    background-color: rgb(0, 214, 108);
+    box-shadow: 0px 4px rgb(30, 145, 98);
+    transition: 0.25s;
+    -moz-transition: background-color 0.2s ease-out;
+    -o-transition: background-color 0.2s ease-out;
+    transition: background-color 0.2s ease-out;
+}
+
+section:nth-of-type(1) > div {
+    display: flex;
+    flex-direction: row;
+    overflow-x: scroll;
+}
+
+article footer a:hover {
     background-color: rgb(0, 214, 108);
     box-shadow: 0px 4px rgb(30, 145, 98);
     transition: 0.25s;
 }
 
-article a {
+article footer a {
     background-color: rgb(40, 0, 160);
     box-shadow: 0px 4px rgb(18, 1, 69);
     color: white;
@@ -189,27 +228,19 @@ article a {
     Border-radius: 0.5em;
     padding: 1em;
     margin: 0.4em;
+    -moz-transition: background-color 0.2s ease-out;
+    -o-transition: background-color 0.2s ease-out;
+    transition: background-color 0.2s ease-out;
 }
 
-article footer a:nth-of-type(1) {
-    position: absolute;
-    bottom: 1em;
-    left: 2em;
-
-}
-
-article footer a:nth-of-type(2) {
-    position: absolute;
-    bottom: 1em;
-    right: 2em;
-}
-
-article a:hover {
+article footer a:hover {
     background-color: rgb(255, 50, 104);
     box-shadow: 0px 4px rgb(202, 43, 85);
     transition: 0.25s;
+    -moz-transition: background-color 0.25s ease-out;
+    -o-transition: background-color 0.25s ease-out;
+    transition: background-color 0.25s ease-out;
 }
-
 
 ul {
     list-style-type: none;
@@ -223,12 +254,11 @@ ul {
 
 section:nth-of-type(1) ul li {
     width: 10%;
-    background: url(/images/star.svg) no-repeat;
-
 }
 
-.verhalen {
-    padding: 1em;
+section article .verhalen {
+    padding: 2em;
+    padding-bottom: 1.5em;
 }
 
 article img {
@@ -240,26 +270,36 @@ article img {
 
 
 
-/*FORM - BUNDEL SAMENSTELLEN*/
+/*
+============================================
+FORM - BUNDEL SAMENSTELLEN
+============================================*/
 
-section:nth-last-of-type(2) {
-    padding: 5em;
+
+section:nth-of-type(2) {
+    padding: 2em;
+    background-color: white;
 }
 
-section:nth-last-of-type(2) form {
-    height: 15em;
+section:nth-of-type(2) form {
     margin-top: 2em;
-    padding: 2em;
+    padding: 0em;
+    padding-top: 2.5em;
+    padding-bottom: 2.5em;
     box-sizing: border-box;
     background-color: rgb(0, 214, 108);
     display: flex;
     border-radius: 0.75em;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 Form > .items {
     color: white;
     width: 9em;
     line-height: 2em;
+    width: 9em;
+    font-size: 1em;
 }
 
 legend {
@@ -271,8 +311,9 @@ label {
     display: block;
 }
 
-button{
-    margin-top: 1em;
+section:nth-of-type(2) a{
+    margin-top: 2em;
+    display: grid;
     width: 13em;
     color: white;
     background-color: rgb(255, 50, 104);
@@ -284,13 +325,20 @@ button{
     padding: 1em 2em;
     text-decoration: none;
     font-family: Nexa Bold;
+    -moz-transition: background-color 0.25s ease-out;
+    -o-transition: background-color 0.25s ease-out;
+    transition: background-color 0.25s ease-out;
 }
 
-button:hover {
+section:nth-of-type(2) a:hover {
     background-color: rgb(0, 214, 108);
     box-shadow: 0px 4px rgb(30, 145, 98);
     transition: 0.25s;
+    -moz-transition: background-color 0.2s ease-out;
+    -o-transition: background-color 0.2s ease-out;
+    transition: background-color 0.2s ease-out;
 }
+
 
 fieldset {
     border: 0;
@@ -298,47 +346,79 @@ fieldset {
 }
 
 
-
-
-/*VOORGESTELDE BUNDELS*/
+/*
+============================================
+VOORGESTELDE BUNDELS
+============================================*/
 
 section:nth-of-type(3) {
     background-color: rgb(243, 229, 216);
-    padding: 5em;
+    padding: 1em;
+    padding-bottom: 7em;
+    padding-top: 2em;
+}
+
+section:nth-of-type(3) .bundels{
+    display: flex;
+    justify-content: center;
+    flex-direction:column;
 }
 
 section:nth-of-type(3) article {
     background-color: white;
-    /*    padding: 2em;*/
-    margin: 2em 2em 5em 0em;
-    width: 20em;
-    height: 30em;
+    margin-left: 1em;
+    margin-right: 1em;
+    margin-top: 2em;
     border-radius: .75em;
-    position: relative;
 }
 
-.bundels {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
+section:nth-of-type(3) article img{
+    width: 100%;
 }
 
 article h3 {
     color: rgb(0, 214, 108);
 }
 
+article h3:hover {
+    color: rgb(255, 50, 104);
+    transition: 0.25s;
+}
+
+section .verhalen h4 {
+    width: 100%;
+}
+
+section .verhalen ul {
+    width: 100%;
+}
 
 footer img {
-    width: 40%;
-    padding-bottom: 2em;
+    width: 1.5em;
+    margin-bottom: 1em;
+}
+
+footer ul li {
+    margin-right: 0.4em;
+}
+
+section .verhalen footer {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 
 
-/*INLOGGEN*/
+
+/*
+============================================
+INLOGGEN - ACCOUNT
+============================================*/
+
 
 body#account {
-    background-color: rgb(0, 214, 108);
+    background-color: white;
 }
 
 body#account header {
@@ -348,16 +428,32 @@ body#account header {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 23em;
+    height: 15em;
 }
 
 body#account form {
-    background-color: white;
-    width: 25em;
-    height: 30em;
-    margin: auto;
-    margin-top: 4em;
-    border-radius: 0.7em;
+    margin-top: -3.5em;
+    margin-bottom: 3em;
+        position: relative;
+
+}
+
+body#account form legend {
+    display: block;
+    font-size: 2em;
+    color: rgb(40, 0, 160);
+    text-align: center;
+    padding-top: 3em;
+}
+
+body#account label {
+    display: block;
+    font-family: Nexa Bold;
+    text-align: left;
+    margin-left: 1.5em;
+    padding: 0.5em;
+    color: #505050;
+
 }
 
 body#account input {
@@ -366,50 +462,269 @@ body#account input {
     padding: 0.5em;
     width: 20em;
     font-size: 1em;
+    color: #505050;
+    border-width: 2px;
+    border-style: solid;
+    border-radius: .5em;
+/*    border-color: lightgray;*/
 }
 
-body#account label {
+input:valid {
+    border-color: rgb(0, 214, 108);
+    border-style: solid;
+    border-width: 2px;
+}
+
+fieldset:valid p:nth-of-type(1) {
     display: block;
-    font-family: Nexa Bold;
+    color: White;
+    background: rgb(42, 120, 204);
+    width: 17em;
+    padding: 1em 0;
+    border-radius: 0.5em;
     text-align: center;
-    padding: 0.5em;
-
+    margin-left: 3em;
 }
 
-body#account form > h1 {
-    display: block;
-    font-size: 2em;
-    color: rgb(40, 0, 160);
-    text-align: center;
-    padding-top: 2.5em;
+fieldset:invalid p:nth-of-type(1) {
+    display: none;
 }
 
-
-body#account p {
-    text-align: center;
-}
-
-body#account p > a {
-    color: rgb(255, 50, 104);
-}
-
-body#account a:hover {
-    color: rgb(40, 0, 160);
-    transition: 0.25
-}
-
-body#account form > button {
+form a#login  {
     color: white;
     background-color: rgb(255, 50, 104);
     box-shadow: 0px 4px rgb(202, 43, 85);
-    border: none;
     margin-top: 1em;
-    width: 13em;
-    Border-radius: 2em;
-    Font-size: 1em;
-    Font-weight: bold;
+    font-family: Nexa Bold;
+    font-size: 1em;
+    font-weight: bold;
+    margin-left: 6.5em;
+    margin-top: 2em;
+    width: 10em;
+    border-radius: 2em;
+    border: none;
     padding: 1em 2em;
     text-decoration: none;
-    font-family: Nexa Bold;
-    margin-left: 6em;
+    position: absolute;
+    text-align: center;
+    -moz-transition: background-color 0.25s ease-out;
+    -o-transition: background-color 0.25s ease-out;
+    transition: background-color 0.25s ease-out;
+}
+
+form a#login:hover {
+    background-color: rgb(40, 0, 160);
+    box-shadow: 0px 4px rgb(18, 1, 69);
+    transition: 0.25s;
+    -moz-transition: background-color 0.2s ease-out;
+    -o-transition: background-color 0.2s ease-out;
+    transition: background-color 0.2s ease-out;
+}
+
+
+body#account p:nth-of-type(2) {
+    margin-top: 7em;
+    text-align: center;
+
+
+}
+
+body#account p:nth-of-type(2) > a {
+    color: rgb(255, 50, 104);
+}
+
+body#account p:nth-of-type(2) > a:hover {
+    color: rgb(40, 0, 160);
+    transition: 0.3;
+}
+
+
+@media screen and (min-width: 30em) {
+    body#account {
+        background-color: rgb(0, 214, 108);
+    }
+    body#account header {
+        width: 100vw;
+        background-color: white;
+        background: url(../images/transaviacabine.jpg) no-repeat;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        height: 20em;
+    }
+    body#account form {
+        background-color: white;
+        width: 25em;
+        height: 32em;
+        margin: auto;
+        margin-top: 4em;
+        border-radius: 0.7em;
+        margin-bottom: 4em;
+    }
+    body#account form legend {
+        display: block;
+        font-size: 2em;
+        color: rgb(40, 0, 160);
+        text-align: center;
+        padding-top: 1.5em;
+    }
+}
+
+
+
+/*
+============================================
+RESPONSIVE : VERHALEN PAGINA
+============================================*/
+
+
+body#verhaal {
+    background: url(../images/confetti.png);
+}
+
+body#verhaal header {
+    width: 100vw;
+    height: 4.95em;
+    background-image: none;
+}
+
+/*mobiel*/
+body#verhaal main img:nth-of-type(1) {
+    display: block;
+    width: 100vw;
+    margin: 0;
+    padding-bottom: 7em;
+}
+
+/*tablet*/
+body#verhaal main img:nth-of-type(2) {
+    display: none;
+    padding-bottom: 7em;
+}
+
+/*desktop*/
+body#verhaal main img:nth-of-type(3) {
+    display: none;
+    padding-bottom: 7em;
+}
+
+/*
+============================================
+MEDIA QUERY : verhalen pagina
+============================================*/
+
+
+@media screen and (min-width: 30em){
+    body#verhaal main img:nth-of-type(1) {
+        display: none;
+
+    }
+    body#verhaal main img:nth-of-type(2) {
+        display: block;
+        width: 100vw;
+        margin: 0;
+    }
+    body#verhaal main img:nth-of-type(3) {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 60em){
+    body#verhaal main img:nth-of-type(2) {
+        display: none;
+    }
+    body#verhaal main img:nth-of-type(3) {
+        display: block;
+        width: 100vw;
+        margin: 0;
+    }
+}
+
+
+
+/*
+============================================
+MEDIA QUERY : ALGEMEEN
+============================================*/
+
+
+@media screen and (min-width: 30em){
+    nav li img{
+        margin-left:0;
+    }
+    h1 {
+        font-size: 2.375em;
+    }
+    #homepage h1{
+        margin-left: 1.5em;
+    }
+    h2 {
+        font-size: 2.375em;
+    }
+    section:nth-of-type(1) {
+        padding: 2em;
+        padding-bottom: 3em;
+    }
+    section:nth-of-type(2) {
+        padding: 2em;
+        padding-bottom: 2em;
+    }
+    section:nth-of-type(3) {
+        padding: 1em;
+        padding-bottom: 7em;
+    }
+    section:nth-of-type(3) .bundels {
+        flex-direction:row;
+        flex-wrap:wrap;
+    }
+    section:nth-of-type(3) article {
+        width:50%;
+        flex:1 1 20em;
+    }
+}
+
+
+
+@media screen and (min-width: 60em) {
+    nav li a {
+        font-size: 1.5em;
+    }
+    h1 {
+        font-size: 3.375em;
+    }
+    #homepage h1 {
+        top: 60%;
+        transform: translateY(-60%);
+    }
+    h2 {
+        font-size: 3.375em;
+    }
+    section:nth-of-type(1) {
+        padding: 5em;
+    }
+    section:nth-of-type(2) {
+        padding: 5em;
+        padding-bottom: 4em
+    }
+    Form > .items {
+        width: 10em;
+        font-size: 1.3em;
+    }
+    section:nth-of-type(3) {
+        padding: 5em;
+    }
+    section:nth-of-type(3){
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        align-items: flex-start;
+    }
+    section:nth-of-type(3) .bundels {
+        flex-direction:row;
+        flex-wrap:wrap;
+    }
+    section:nth-of-type(3) article {
+        width:50%;
+        flex:1 1 20em;
+    }
 }
