--- a/css/styles.css
+++ b/css/styles.css
@@ -8,13 +8,13 @@ GENERIC STYLES
 }
 
 @font-face {
-    font-family: "Nexa Regular", helvetica;
-    src: url("./fonts/NexaRegular.ttf");
+    font-family: "Nexa Regular";
+    src: url("../fonts/NexaRegular.ttf");
 }
 
 @font-face {
-    font-family: "Nexa Bold", helvetica;
-    src: url("./fonts/NexaBold.ttf");
+    font-family: "Nexa Bold";
+    src: url("../fonts/NexaBold.ttf");
 }
 
 body {
