--- a/css/styles.css
+++ b/css/styles.css
@@ -303,6 +303,7 @@ section:nth-of-type(2) form {
     justify-content: center;
 }
 
+
 Form > .items {
     color: white;
     width: 9em;
@@ -384,6 +385,7 @@ section:nth-of-type(3) article {
 section:nth-of-type(3) article img{
     width: 100%;
 }
+
 
 article h3 {
     color: rgb(0, 214, 108);
@@ -487,6 +489,31 @@ body#account input:valid {
     border: 2px solid #4de298;
 }
 
+body#account input[type=text]:focus{
+    background-color:#b5b5b5;
+}
+
+body#account input[type=text]:valid:focus{
+    background-color: lightgreen;
+}
+
+body#account input[type=text]:invalid:focus{
+    background-color: lightcoral;
+}
+
+body#account input[type=email]:focus{
+    background-color:#b5b5b5;
+}
+
+body#account input[type=email]:valid:focus{
+    background-color: lightgreen;
+}
+
+body#account input[type=email]:invalid:focus{
+    background-color: lightcoral;
+}
+
+
 ::placeholder {
     color: lightgrey;
 }
@@ -514,22 +541,20 @@ body#account fieldset:invalid p:nth-of-type(1) {
     display: none;
 }
 
-body#account form a#login  {
+body#account input[type=submit] {
     color: white;
     background-color: rgb(255, 50, 104);
     box-shadow: 0px 4px rgb(202, 43, 85);
     font-family: "Nexa Bold", helvetica;
     font-size: 1em;
     font-weight: bold;
-    margin-top: 1.5em;
-    margin-left: 26%;
+    margin-top: 2em;
     align-items: center;
     width: 10em;
     border-radius: 2em;
     border: none;
     padding: 1em 2em;
     text-decoration: none;
-    position: absolute;
     text-align: center;
     -moz-transition: background-color 0.25s ease-out;
     -o-transition: background-color 0.25s ease-out;
@@ -547,7 +572,7 @@ body#account form a#login:hover {
 
 
 body#account p:nth-of-type(2) {
-    margin-top: 6em;
+    margin-top: 2em;
     text-align: center;
 }
 
@@ -779,19 +804,16 @@ body#verhaal main img:nth-of-type(1) {
     display: block;
     width: 100vw;
     margin: 0;
-    padding-bottom: 7em;
 }
 
 /*tablet*/
 body#verhaal main img:nth-of-type(2) {
     display: none;
-    padding-bottom: 7em;
 }
 
 /*desktop*/
 body#verhaal main img:nth-of-type(3) {
     display: none;
-    padding-bottom: 7em;
 }
 
 /*
